Fixed alert position and border in search page

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -3,7 +3,7 @@
 * ------------------------------------- */
 
 .alert {
-  margin: 0;
+  margin: 70px 0 -70px 0;
   text-align: center;
   color: white;
 }
