--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -113,13 +113,17 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-12 text-center hide-filter">
-        <span class="hide-arrow"><i class="fa fa-arrow-circle-o-up align-center"></i></span>
-        <span class="hide-arrow hidden"><i class="fa fa-arrow-circle-o-down align-center"></i></span>
+      <div class="col-xs-12">
+        <div class="hide-filter text-center">
+          <span class="hide-arrow"><i class="fa fa-arrow-circle-o-up align-center"></i></span>
+          <span class="hide-arrow hidden"><i class="fa fa-arrow-circle-o-down align-center"></i></span>
+        </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 text-center hide-filter" style="box-shadow: none;">
+      <div class="col-xs-12">
+        <div class="hide-filter text-center" text-center hide-filter" style="border: none;">
+        </div>
       </div>
     </div>
 
