Changes in gems and required files for datepicker + other small front updates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,7 @@
 // External libraries
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "bootstrap-datepicker";
+@import "bootstrap-datepicker3";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 // @import "jquery-ui";
