--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -40,6 +40,9 @@
   outline: none;
   background-color: white;
 }
+.search-date {
+  width: 100%;
+}
 .search-input:focus {
   border: 1px solid #CCCCCC;
 }
