--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -6,12 +6,12 @@
         <input type="hidden" name="has_practice" value="<%= @has_practice %>">
         <div class="row">
           <div class="col-xs-12 col-sm-4">
-            <div class="row-fluid">
+            <!-- <div class="row-fluid"> -->
               <div class="col-xs-12">
                 <input class="search-input full-input" placeholder="Ville ou adresse" name="location" id="user_input_autocomplete_address" value="<%= @location %>">
               </div>
-            </div>
-            <div class="row-fluid">
+            <!-- </div> -->
+            <!-- <div class="row-fluid"> -->
               <div class="col-xs-12">
                 <select class="search-input select-height full-input" name="speciality">
                   <option <%= "selected" if @speciality == "Médecine générale" %> class="search-input" value="Médecine générale">Médecine générale</option>
@@ -19,15 +19,15 @@
                   <option <%= "selected" if @speciality == "Autre spécialité" %> class="search-input" value="Autre spécialité">Autre spécialité</option>
                 </select>
               </div>
-            </div>
-            <div class="row-fluid">
+<!--             </div>
+            <div class="row-fluid"> -->
               <div class="col-xs-12 col-sm-6">
-                <input type="text" class="search-input datepick" placeholder="Date de début" name="start_date" value="<%= @start_date %>">
+                <input type="text" class="search-input search-date datepick" placeholder="Date de début" name="start_date" value="<%= @start_date %>">
               </div>
               <div class="col-xs-12 col-sm-6">
-                <input type="text" class="search-input datepick" placeholder="Date de fin" name="end_date" value="<%= @end_date %>">
+                <input type="text" class="search-input search-date datepick" placeholder="Date de fin" name="end_date" value="<%= @end_date %>">
               </div>
-            </div>
+            <!-- </div> -->
           </div>
           <div class="col-xs-12 col-sm-8">
             <div class="row-fluid">
