--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,10 @@
     <div class="col-md-8 col-md-offset-1">
       <div class="calendar-profil">
         <h4><strong>Prenez votre créneau de remplacement directement en ligne</strong></h4>
+        <div class="user_availabilities">
+
+
+        </div>
       </div>
     </div>
   </div>
