--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,13 +5,9 @@
 // External libraries
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "bootstrap-datepicker3";
+@import "bootstrap-datepicker";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-// @import "jquery-ui";
-// @import 'jquery-ui/core.css';
-// @import 'jquery-ui/datepicker.css';
-// @import 'jquery-ui/theme.css';
 
 // Your CSS
 @import "layout/index";
