--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,10 @@
         <h4><strong>Prenez votre créneau de remplacement directement en ligne</strong></h4>
         <div class="user_availabilities">
 
+          <% @slot_ranges.each do |range| %>
+          <ul class="list-inline list-unstyled">
+              <li><%= human_slot_range(range) %></li>
+          <% end %>
 
         </div>
       </div>
