Duplication of search pages : locums and practices - WIP

--- a/app/assets/stylesheets/components/_datepicker.scss
+++ b/app/assets/stylesheets/components/_datepicker.scss
@@ -4,3 +4,6 @@
 .datepicker .new {
   color: $gray-light !important;
 }
+// .datepicker .datepicker-dropdown .dropdown-menu .datepicker-orient-left .datepicker-orient-bottom {
+//   top: 230px !important;
+// }
