--- a/app/views/users/search_locums.html.erb
+++ b/app/views/users/search_locums.html.erb
@@ -2,8 +2,7 @@
 <div class="page-content padded">
   <div class="container main">
     <div id="search-filter">
-      <form action="/search">
-        <input type="hidden" name="has_practice" value="<%= @has_practice %>">
+      <form action="/search_locums">
         <div class="row">
           <div class="col-xs-12 col-sm-4">
             <!-- <div class="row-fluid"> -->
@@ -32,6 +31,19 @@
           <div class="col-xs-12 col-sm-8">
             <div class="row-fluid">
               <div class="col-xs-12">
+                <% if current_user.has_practice %>
+                <div class="option-flex filter-row">
+                  <div class="label-option">
+                    <label for="commission">Reversement au remplaçant</label>
+                  </div>
+                  <div class="slider-values">
+                    <input type="text" name="commission-single" class="text-center slider-values-text" id="commission-single" readonly>
+                  </div>
+                  <div class="slider-bar">
+                    <div id="slider-single"></div>
+                  </div>
+                </div>
+                <% else %>
                 <div class="option-flex filter-row">
                   <div class="label-option">
                     <label for="commission">Reversement au remplaçant</label>
@@ -43,6 +55,7 @@
                     <div id="slider-range"></div>
                   </div>
                 </div>
+                <% end %>
               </div>
             </div>
             <div class="row-fluid">
@@ -66,11 +79,11 @@
             </div>
             <div class="row-fluid">
               <div class="col-xs-12">
-                <div class="option-flex filter-row">
-                  <div class="label-option-small">
+                <div class="option-flex filter-row hidden-xs">
+                  <div class="label-option">
                     <div class="form-group">
-                      <select name="convention" class="search-input">
-                        <option value="" disabled selected="selected">Conventionnement</option>
+                      <select name="convention" class="search-input select-height">
+                        <option value="" disabled class="selected" selected="selected">Conventionnement</option>
                         <option <%= "selected" if @convention == "all" %> value="all">Tout</option>
                         <option <%= "selected" if @convention == "1" %> value="1">Secteur 1</option>
                         <option <%= "selected" if @convention == "2" %> value="2">Secteur 2</option>
@@ -78,9 +91,15 @@
                       </select>
                     </div>
                   </div>
-                  <div class="label-option-small">
-                    <div class="checkbox">
-                      <label><input type="checkbox" value="true" <%= "checked" if @housing == true %> name="housing" class="search-input"> Hébergement</label>
+                  <div class="label-option-large">
+                    <div class="form-group">
+                      <select name="house_visits" class="search-input select-height">
+                        <option value="" disabled class="selected" selected>Visites à domicile</option>
+                        <option <%= "selected" if @house_visits == "all" %> value="all">Tout</option>
+                        <option <%= "selected" if @house_visits == "none" %> value="none">Aucune</option>
+                        <option <%= "selected" if @house_visits == "max2" %> value="max2"><= 2 par jour</option>
+                        <option <%= "selected" if @house_visits == "above2" %> value="above2">> 2 par jour</option>
+                      </select>
                     </div>
                   </div>
                   <div class="label-option-small">
@@ -88,15 +107,9 @@
                       <label><input type="checkbox" value="true" <%= "checked" if @secretary == true %> name="secretary" class="search-input"> Secrétariat</label>
                     </div>
                   </div>
-                  <div class="label-option-large">
-                    <div class="form-group">
-                      <select name="house_visits" class="search-input">
-                        <option value="" disabled selected>Nombre de visites à domicile</option>
-                        <option <%= "selected" if @house_visits == "all" %> value="all">Tout</option>
-                        <option <%= "selected" if @house_visits == "none" %> value="none">Aucune</option>
-                        <option <%= "selected" if @house_visits == "max2" %> value="max2"><= 2 par jour</option>
-                        <option <%= "selected" if @house_visits == "above2" %> value="above2">> 2 par jour</option>
-                      </select>
+                  <div class="label-option-small hidden-xs hidden-sm">
+                    <div class="checkbox">
+                      <label><input type="checkbox" value="true" <%= "checked" if @housing == true %> name="housing" class="search-input"> Hébergement</label>
                     </div>
                   </div>
                 </div>
@@ -122,7 +135,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <div class="hide-filter text-center" text-center hide-filter" style="border: none;">
+        <div class="hide-filter text-center" style="border: none;">
         </div>
       </div>
     </div>
