--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,13 +32,12 @@
         <h4><strong>Prenez votre créneau de remplacement directement en ligne</strong></h4>
         <div class="user_availabilities">
 
-         <%= @start_date %>
-         <%= @end_date %>
-
           <% @slot_ranges.each do |range| %>
           <ul class="list-inline list-unstyled">
               <li><%= human_slot_range(range) %></li>
-              <li><%= link_to "prendre contact pour ce créneau", user_bookings_path(current_user), method: :post, data: { confirm: "Etes-vous sûr(e) ?" } %></li>
+              <li><%= slot_start(range) %></li>
+              <li><%= slot_end(range) %></li>
+              <li><%= link_to "prendre contact pour ce créneau", user_bookings_path(@user, start_date: slot_start(range), end_date: slot_end(range)), method: :post, data: { confirm: "Etes-vous sûr(e) ?" }, class: "btn" %></li>
           <% end %>
 
         </div>
