--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
     <% if user_signed_in? %>
 
       <!-- Notification -->
-      <%= link_to user_path(current_user), class: "navbar-wagon-item navbar-wagon-link" do %>
+      <%= link_to user_messages_path(current_user), class: "navbar-wagon-item navbar-wagon-link" do %>
         <div class="badge-container">
           <i class="fa fa-envelope-o"></i>
           <%# if current_user.bikes.first.nil? %>
