--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,5 +1,9 @@
 <div id="title" class="text-center">
+  <% if @user.has_practice? %>
   <h3>Mon calendrier de recherches de remplacants</h3>
+    <% else %>
+  <h3>Mon calendrier de recherches de remplacements</h3>
+  <%end%>
 </div>
 
 
@@ -22,7 +26,11 @@
   <div class="container">
     <div class="row-fluid">
       <div class="availabilities text-center col-sm-12 col-md-6">
-      <h4>Mes recherches de remplacants</h4>
+      <% if @user.has_practice? %>
+        <h4>Les dates où je recherche des remplacants</h4>
+        <% else %>
+        <h4>Les dates où je recherche des remplacements</h4>
+      <%end%>
       <% if @slot_ranges.ntuples == 0 %>
          <i class="fa fa-calendar-minus-o"></i>
          <div class="empty_availabilities">Vous n'avez pas encore défini de plages de recherches <br> Veuillez remplir votre calendrier ci-dessus et valider vos plages</div>
@@ -37,7 +45,7 @@
       <% end %>
       </div>
       <div class="incoming_demands text-center col-sm-12 col-md-6">
-          <h4>Mes demandes de remplacants en cours</h4>
+            <h4>Les demandes entrantes de remplacement</h4>
           <% if @user.bookings.nil? %>
             <i class="fa fa-user-md"></i>
               <div class="empty_availabilities">Vous n'avez pas encore reçu de demandes <br> Commencez par remplir votre calendrier ci-dessus et valider vos plages</div>
