--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
                 <% slot_end(range) %>
 
                 <% if current_user.numero_ordre.nil? %>
-                  <li class= "single_dispo"><%= link_to "#{human_slot_range(range)}", "#", data: {toggle: "modal", target: "#contacter"}%>
+                  <li class= "single_dispo"><%= link_to "#{human_slot_range(range)}", user_bookings_path(@user, start_date: slot_start(range), end_date: slot_end(range)), data: {toggle: "modal", target: "#contacter"}%>
                   </li>
                 <% else %>
                 <li class= "single_dispo"><%= link_to "#{human_slot_range(range)}", user_bookings_path(@user, start_date: slot_start(range), end_date: slot_end(range)), method: :post, data: { confirm: "Etes-vous sûr(e) ?" }, class: "" %>
