--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,6 +33,7 @@
             <option value="Kinésithérapie">Kinésithérapie</option>
             <option value="Autre spécialité">Autre spécialité</option>
           </select>
+          <input type="hidden" name="unrated" value="true">
           <button type="submit" class="btn btn-primary btn-search-home"><i class="fa fa-search"></i></button>
         </form>
     </div>
