--- a/app/views/users/search_locums.html.erb
+++ b/app/views/users/search_locums.html.erb
@@ -93,7 +93,7 @@
                   </div>
                   <div class="slider-margin"></div>
                   <div class="slider-addon checkbox hidden-xs">
-                    <label><input type="checkbox" name="unrated" value="true" checked> Inclure les profils non-notés</label>
+                    <label><input type="checkbox" name="unrated" value="true" <%= "checked" if @unrated == true %>> Inclure les profils non-notés</label>
                   </div>
                 </div>
               </div>
