small front changes

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -2,17 +2,15 @@
   margin-top: 100px;
 }
 .card-profil {
-  height: 335px;
-  border: 1px solid grey;
-  border-radius: 7px;
+  // border: 1px solid grey;
+  // border-radius: 7px;
   font-weight: lighter;
   padding: 10px 10px;
 }
 .calendar-profil {
-  height: 335px;
   text-align: center;
-  border: 1px solid grey;
-  border-radius: 7px;
+  // border: 1px solid grey;
+  // border-radius: 7px;
   font-weight: lighter;
   padding: 10px 10px;
 }
