--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -14,17 +14,17 @@
   font-weight: lighter;
   padding: 10px 10px;
 }
-.description-profil {
-  height: 200px;
-  h4 {
-    color: $blue;
-  }
-  // border: 1px solid grey;
-  // border-radius: 7px;
-  font-weight: lighter;
-  padding: 10px 10px;
-  margin: 10px 0px;
-}
+// .description-profil {
+//   height: 200px;
+//   h4 {
+//     color: $blue;
+//   }
+//   // border: 1px solid grey;
+//   // border-radius: 7px;
+//   font-weight: lighter;
+//   padding: 10px 10px;
+//   margin: 10px 0px;
+// }
 .card-acces {
   h4 {
     color: $blue;
