Dynamic page titles and design of error pages

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :meta_title, "RemplaMatch - Mon calendrier - #{current_user.first_name} #{current_user.last_name}" %>
+
 <div id="title" class="text-center">
   <% if current_user.has_practice == false %>
     <h3>Mon calendrier de recherches de remplacements</h3>
