--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,3 +1,5 @@
+<% content_for :meta_title, "RemplaMatch - Mon profil - #{current_user.first_name} #{current_user.last_name}" %>
+
 <div class="container" id="user_container">
   <div class="row">
     <div class="col-xs-12 col-md-6">
