--- a/app/views/users/search_locums.html.erb
+++ b/app/views/users/search_locums.html.erb
@@ -1,3 +1,4 @@
+<% content_for :meta_title, "RemplaMatch - Profils de remplaçants" %>
 
 <div class="page-content padded">
   <div class="container main">
