--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :meta_title, "RemplaMatch - Profil de #{@user.first_name} #{@user.last_name}" %>
+
 <div class="container user_container">
   <div class="row" id="main_user_row">
     <div class="profile">
@@ -6,10 +8,10 @@
         <div class="col-xs-12 col-md-8">
           <ul class = "list-unstyled doc_resume text-center">
             <li>
-              <% if current_user.avatar.nil? %>
+              <% if @user.avatar.nil? %>
                 <%= image_tag "placeholder_pic.png", class: "avatar-superextralarge" %>
               <% else %>
-                <%= image_tag current_user.avatar, class: "avatar-superextralarge " %>
+                <%= image_tag @user.avatar, class: "avatar-superextralarge " %>
               <% end %>
             </li>
             <li><H4><strong>Dr </strong><%= @user.first_name %> <%= @user.last_name %></H4></li>
